# UP-WIFI-14

./: .gitignore  example_file.txt  pyproject.toml
python_src/: api.py  pyproject.toml  udp_receiver.py
scripts/: formatting_check.sh
src/: __main__.py  merge_chunks.py  read_file.py  task.py  udp_receiver.py  udp_sender.py
